# gstreamer_training

./: .gitignore  CMakeLists.txt
include/gstreamer-1.0/gst/webrtc/: webrtc-enumtypes.h
lib/: glib-2.0.lib  gobject-2.0.lib  gstapp-1.0.lib  gstaudio-1.0.lib  gstreamer-1.0.lib  gstrtspserver-1.0.lib
src/: CMakeLists.txt  basic-tutorial-8.c  my_appsrc.c  test_appsrc.c  test_readme.c
src/step0/: CMakeLists.txt  test-readme.c
src/step1/: CMakeLists.txt  appsrc_context.cpp  appsrc_context.h  my_appsrc.c
src/step2/: CMakeLists.txt  RawSource.cpp  StreamSource.h  appsrc_context.cpp  appsrc_context.h  main.cpp  rtsp_server.c
src/step3/: CMakeLists.txt  frame_source.cpp  frame_source.h  rtsp_server.c
